# swagger.json
@@ -87,7 +87,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"api_token": []
+					}
+				],
 				"parameters": []
 			},
 			"post": {
@@ -117,10 +121,8 @@
 					"200": {
 						"description": "Ok",
 						"schema": {
-							"items": {
-								"$ref": "#/definitions/UserInterfaceAbstraction"
-							},
-							"type": "array"
+							"additionalProperties": true,
+							"type": "object"
 						}
 					}
 				},
@@ -150,7 +152,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"api_token": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -174,7 +180,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"api_token": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -197,7 +207,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"api_token": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -213,5 +227,11 @@
 		"application/json"
 	],
 	"swagger": "2.0",
-	"securityDefinitions": {}
+	"securityDefinitions": {
+		"tsoa_auth": {
+			"type": "oauth2",
+			"authorizationUrl": "http://swagger.io/api/oauth/dialog",
+			"name": "api_token"
+		}
+	}
 }
